# mock-vectorDB

./: CMakeLists.txt  README.md  debug.sh  experiment.sh  ivf_fc_flat.cc  ivf_flat.cc  main.cc  similarity_function.cpp
common/: CMakeLists.txt  dataset.cc  dataset.hh  result.cc  result.hh  similarity_function.cc  similarity_function.hh
conf/: sample.yaml
index/: CMakeLists.txt  flat.cc  flat.hh  ivf_fc_flat.cc  ivf_fc_flat.hh  ivf_flat.cc  ivf_flat.hh
